[package]
name = "rust-on-step-mxo2-lpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-bigint = "0.4.4"
rust-hdl = { version = "0.46.0", features = ["fpga"] }
# rust-hdl-bsp-step-mxo2-lpc = "0.1.1"
rust-hdl-bsp-step-mxo2-lpc = { path = "../rust-hdl-bsp-step-mxo2-lpc" }
